# greek-stylometer

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
scripts/: data_prep.sh  gcloud_build_and_monte_carlo.sh  gcloud_build_and_train.sh  gcloud_data_build_and_train.sh  gcloud_tensorboard.sh  gcloud_test_build_and_monte_carlo.sh  gcloud_test_data_prep.sh  gcloud_train.sh
src/greek_stylometer/: cli.py  schemas.py  vertex_wrapper.py
src/greek_stylometer/analysis/: aggregation.py  evaluation.py  lime.py
src/greek_stylometer/corpus/: base.py  cleaning.py  first1kgreek.py  jsonl.py
src/greek_stylometer/models/: bert.py  config.py  export.py
src/greek_stylometer/preprocessing/: chunking.py  normalize.py
tests/: test_aggregation.py  test_bert.py  test_chunking.py  test_cleaning.py  test_evaluation.py  test_normalize.py  test_schemas.py
